<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/dialog">
    <ImageView android:src="@drawable/cash"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/closeout" />
    <TextView android:id="@+id/tv_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>
    <TextView android:text="@string/confirm_closeout"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <Button android:id="@+id/btn_cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="?attr/selectableItemBackground"/>
</LinearLayout>