<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="shadow.android.data_entry_1.about.AboutFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/about" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:autoLink="phone"
        android:drawableStart="@drawable/phone"
        android:gravity="center"
        android:text="@string/phone"
        android:textColorLink="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tv_twitter"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:autoLink="web"
        android:drawableStart="@drawable/twitter"
        android:gravity="center"
        android:text="@string/twitter"
        android:textColorLink="@color/colorPrimaryDark" />

</LinearLayout>