<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView android:id="@+id/tv_day"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"/>

        <ImageButton android:id="@+id/btn_dinner"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/letter_d"
            android:background="?attr/selectableItemBackground"
            android:layout_weight="0.1"
            android:contentDescription="@string/info_day" />
        <EditText android:id="@+id/et_dinner"
            android:hint="@string/dinner"
            android:gravity="center"
            android:layout_width="0dp"
            android:background="@color/verta"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:layout_weight="1"
            android:importantForAutofill="no" />
        <ImageButton android:id="@+id/btn_lunch"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/letter_l"
            android:background="?attr/selectableItemBackground"
            android:layout_weight="0.1"
            android:contentDescription="@string/info_lunch" />
        <EditText android:id="@+id/et_lunch"
            android:hint="@string/lunch"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/verta"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:layout_weight="1"
            android:importantForAutofill="no" />
        <ImageButton android:id="@+id/btn_breakfast"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/letter_b"
            android:background="?attr/selectableItemBackground"
            android:layout_weight="0.1"
            android:contentDescription="@string/breakfast" />
        <EditText android:id="@+id/et_breakfast"
            android:hint="@string/breakfast"
            android:gravity="center"
            android:layout_width="0dp"
            android:background="@color/verta"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:layout_weight="1"
            android:importantForAutofill="no" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>
</LinearLayout>