<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:background="@drawable/dialog"
    android:orientation="vertical"
    android:gravity="start"
    android:padding="5dp"
    android:layout_height="wrap_content">
  <TextView android:text="@string/tv_period_from"
      android:layout_width="wrap_content"
      android:layout_marginEnd="10dp"
      android:layout_height="wrap_content" />
    <DatePicker
        android:id="@+id/dp_from"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:headerBackground="@color/colorAccent" />
    <TextView android:text="@string/tv_period_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp" />
    <DatePicker
        android:id="@+id/dp_to"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:headerBackground="@color/colorAccent" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/btn_submit_user"
            android:text="@string/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</LinearLayout>
